Fix the GPUIno.sandboxed bit update.

BUG=806669
TEST=affected bots
R=piman@chromium.org,xiyuan@chromium.org
NOTRY=true

Change-Id: I954fc1f5cdcffe4d55ff41927b9b33075c9fd616
Reviewed-on: https://chromium-review.googlesource.com/892088
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532748}
Former-commit-id: 48e31c1abc9d016c0d07ad32906094a31dc16733